# cpe-inventory

./: .gitignore  LICENSE  README.md  cpe-inventory.cabal
src/: Main.hs
